syntax = "proto3";

package silhouette.v1;

option go_package = "github.com/mundrapranay/silhouette-db/api/v1;apiv1";

// CoordinationService provides the API for LEDP workers to interact with
// the oblivious, distributed coordination layer.
service CoordinationService {
    // StartRound initializes a new synchronous round for data submission.
    // It tells the system to expect data from a certain number of workers.
    rpc StartRound(StartRoundRequest) returns (StartRoundResponse);

    // PublishValues allows a worker to submit its key-value pairs for a given round.
    // The server will aggregate contributions from all workers before encoding.
    rpc PublishValues(PublishValuesRequest) returns (PublishValuesResponse);

    // GetValue allows a worker to privately retrieve a value for a specific key
    // from a completed round using a PIR query.
    rpc GetValue(GetValueRequest) returns (GetValueResponse);

    // GetBaseParams returns the serialized BaseParams for a round.
    // Clients use this to initialize their FrodoPIR client.
    rpc GetBaseParams(GetBaseParamsRequest) returns (GetBaseParamsResponse);

    // GetKeyMapping returns the key-to-index mapping for a round.
    // Clients use this to map keys to database indices for PIR queries.
    rpc GetKeyMapping(GetKeyMappingRequest) returns (GetKeyMappingResponse);
}

// A single key-value pair. Keys are strings for simplicity, values are opaque bytes.
message KeyValuePair {
    string key = 1;
    bytes value = 2;
}

message StartRoundRequest {
    // A unique identifier for the algorithmic round.
    uint64 round_id = 1;
    // The number of workers that will be submitting data in this round.
    // The leader will wait for this many PublishValues calls before proceeding.
    int32 expected_workers = 2;
}

message StartRoundResponse {
    // Acknowledges that the round has been initiated on the server.
    bool success = 1;
}

message PublishValuesRequest {
    uint64 round_id = 1;
    // A unique ID for the calling worker, to track submissions.
    string worker_id = 2;
    // The set of key-value pairs this worker is contributing.
    repeated KeyValuePair pairs = 3;
}

message PublishValuesResponse {
    // Acknowledges receipt of the worker's contribution.
    bool success = 1;
}

message GetValueRequest {
    uint64 round_id = 1;
    // The opaque PIR query generated by the client's PIR library for a specific key.
    bytes pir_query = 2;
}

message GetValueResponse {
    // The opaque PIR response generated by the server, to be decoded by the client.
    bytes pir_response = 1;
}

message GetBaseParamsRequest {
    uint64 round_id = 1;
}

message GetBaseParamsResponse {
    // Serialized BaseParams for FrodoPIR client initialization.
    bytes base_params = 1;
}

message GetKeyMappingRequest {
    uint64 round_id = 1;
}

message KeyMappingEntry {
    string key = 1;
    int32 index = 2; // Database row index for this key
}

message GetKeyMappingResponse {
    repeated KeyMappingEntry entries = 1;
}

